fix: resolve contrast error on page: /news

--- a/ckanext/nhs/fanstatic/css/nhs.css
+++ b/ckanext/nhs/fanstatic/css/nhs.css
@@ -2367,3 +2367,7 @@ blockquote {
     align-content: flex-start !important;
   }
 }
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
+  color: #404040 !important;
+}
